updated file/folder structure

--- a/content/templates/form.html
+++ b/content/templates/form.html
@@ -12,6 +12,8 @@
         <input type="radio" name="vote" value="no_one" />No one expects the Spanish Inquisition! <br />
         <input type="submit" value="Vote" />
 
+		<p>small change</p>
+		
     </form>
 
   
